fix grid image title overflow

--- a/src/App.css
+++ b/src/App.css
@@ -200,6 +200,7 @@ h3 {
   font-size: 20px;
   margin-top: 20px;
   font-family: Arial, Helvetica, sans-serif;
+  word-wrap: break-word;
 }
 
 .grid-img-title:hover {
